# projetos-eng-dados

./: README.md  arquivo1.py  bug.py  main.py
bootcamp_python/: README.md  desafio.py  exercicios.py  main.py  pyproject.toml
bootcamp_python/aula12/: csv_class.py  exemplo2.csv  usar_class.py
projeto_django/: pyproject.toml
projeto_git_aula1/: main.py
