[tool.poetry]
name = "aula12"
version = "0.1.0"
description = "exercicios aula 12 python"
authors = ["Felipe Velozo <felipe_velozo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
